--- a/client/src/CSS/CustomerCSS/CustomerShopProductDetails.css
+++ b/client/src/CSS/CustomerCSS/CustomerShopProductDetails.css
@@ -39,7 +39,7 @@
 .customer-shop-product-details-content{
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: start;
 }
 
 
@@ -50,6 +50,7 @@
     padding: 20px;
     gap: 30px;
     flex: 1;
+    margin-top: 50px;
 }
 
 .customer-shop-product-details-content .customer-shop-product-details-content-left .shop-products-left ul li{
